<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment1">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle|end"
        android:divider="@drawable/divider_line"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle|end"
        android:divider="@drawable/divider_line"
        tools:ignore="MissingConstraints">

        <!--name-->
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="65px"
            android:text="@string/xingming"/>
        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:autofillHints="1"
            android:layout_weight="1"
            android:textSize="65px"
            tools:ignore="LabelFor"
            android:text="张三"
            />
        <!--gender-->
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="65px"
            android:text="@string/xingbie"/>
        <EditText
            android:id="@+id/gender1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="1"
            android:layout_weight="1"
            android:textSize="65px"
            tools:ignore="LabelFor"
            android:text="男"
            />
        <!--age-->
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="65px"
            android:text="@string/age"/>
        <EditText
            android:id="@+id/age1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="1"
            android:layout_weight="1"
            android:textSize="65px"
            tools:ignore="LabelFor"
            android:text="21"

            />
        </LinearLayout>
<!--second line-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_line"
            tools:ignore="MissingConstraints">

            <!--job-->
            <TextView
                android:id="@+id/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/job"/>
            <EditText
                android:id="@+id/job1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="医生"
                />
            <!--nation-->
            <TextView
                android:id="@+id/nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/nation"/>
            <EditText
                android:id="@+id/nation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="汉族"
                />
            <!--marriage-->
            <TextView
                android:id="@+id/marriage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/marriage"/>
            <EditText
                android:id="@+id/marriage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="未婚"
                />
        </LinearLayout>
        <!--third line-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_line"
            tools:ignore="MissingConstraints">

            <!--birthplace-->
            <TextView
                android:id="@+id/birthplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/birthplace"/>
            <EditText
                android:id="@+id/birthplace1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="北京"
                />
            <!--workplace-->
            <TextView
                android:id="@+id/workplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/workplace"/>
            <EditText
                android:id="@+id/workplace1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="交通大学"
                />
            <!--address-->
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="现住址:"/>
            <EditText
                android:id="@+id/address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="海淀"
                />
        </LinearLayout>


        <!--fourth line-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_line"
            tools:ignore="MissingConstraints">

            <!--phone-->
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/phone"/>
            <EditText
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="55px"
                tools:ignore="LabelFor"
                android:text="10010"
                />
            <!--admission date-->
            <TextView
                android:id="@+id/adDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/adDate"/>

            <EditText
                android:id="@+id/adDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="55px"
                tools:ignore="LabelFor"
                android:hint="如：2021.8.1"
                android:text="2021.8.1"
                />
            <!--record date-->
            <TextView
                android:id="@+id/recordDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/recordDate"/>
            <EditText
                android:id="@+id/recordDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="55px"
                android:hint="如：2021.8.1"
                tools:ignore="LabelFor"
                android:text="2021.8.1"
                />
        </LinearLayout>


        <!--fifth line-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_line"
            tools:ignore="MissingConstraints">

            <!--teller-->
            <TextView
                android:id="@+id/teller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/teller"/>
            <EditText
                android:id="@+id/teller1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:hint="本人/家属"
                android:text="本人"
                />
            <!--reliability level-->
            <TextView
                android:id="@+id/reliability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="65px"
                android:text="@string/reliability"/>
            <EditText
                android:id="@+id/reliability1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="1"
                android:layout_weight="1"
                android:textSize="65px"
                tools:ignore="LabelFor"
                android:text="可靠"
                />

        </LinearLayout>






    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>